# evalGate

./: .gitignore  NOTES.md  README.md  evalgate.toml  pyproject.toml
dashboard/: app.py
examples/sec_agent/: __init__.py  agent.py  chat.py  record_fixtures.py
examples/sec_agent/fixtures/: 07b5eaef93378cf5.json  1ecfa4f8cb0c39ea.json  1fcc706c14d082b1.json  20df42f68de5597c.json  32fb4d47b7c58a2a.json  350c1a14b67a3810.json  587c133c2376b2e8.json  597cbaed96873924.json  67b767aac259adf1.json  6dd9764d9569ae2b.json  91bdab619e8f37da.json  b986f6790669a272.json  d19f55a5af75132c.json  d8deed0f49b443df.json  da4d38e808e27baf.json  dae1aa62fd220625.json  e91e3a5fdc6893d3.json  ef055d13b1b76eea.json  index.json
examples/sec_agent/tools/: __init__.py  edgar.py
src/evalgate/: __init__.py  adapter.py  calibrate.py  cli.py  compare.py  config.py  loader.py  mine.py  plugin.py  runner.py  schema.py  stats.py  store.py
src/evalgate/adapters/: __init__.py  adk.py
src/evalgate/scorers/: __init__.py  base.py  deterministic.py  judge.py  trajectory.py
tests/: test_adapter.py  test_config.py  test_edgar.py
