[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalgate"
version = "0.1.0"
description = "Evaluation and regression-testing framework for LLM agent systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0.0",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "typer>=0.12.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
evalgate = "evalgate.cli:app"

[project.entry-points.pytest11]
evalgate = "evalgate.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/evalgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# These scripts manipulate sys.path before importing — E402 is unavoidable.
"examples/sec_agent/chat.py" = ["E402"]
"examples/sec_agent/record_fixtures.py" = ["E402"]
"examples/sec_agent/agent.py" = ["E402"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
